<resources>
    <string name="app_name">GlideIM</string>
    <string name="login">Login</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="submit">submit</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">or</string>
    <string name="register">Register</string>
    <string name="password_again">Password again</string>
    <string name="signin">SignIn</string>
    <string name="home">Home</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="contacts">Contacts</string>
    <string name="uid_or_group_id">UID or Group ID</string>
    <string name="search">Search</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="qr_code">QR Code</string>
    <string name="new_contacts">New Contacts</string>
    <string name="chat">Chat</string>
    <string name="notifications">Notifications</string>
    <string name="add_friend">Add Friend</string>
    <string name="add_group">Add Group</string>
    <string name="create_group">Create Group</string>
    <string name="search_user">Search User</string>
    <string name="join_group">Join Group</string>
    <string name="members">Members</string>
    <string name="invite">Invite</string>
    <string name="exit_and_delete">Exit And Delete</string>
    <string name="group_members">Group Members</string>
    <string name="clean_cache">Clean Cache</string>
    <string name="update_profile">Update Profile</string>
    <string name="settings">Settings</string>
    <string name="complete">Complete</string>
    <string name="recall">Recall</string>
    <string name="api_base_url">Api Base URL</string>
    <string name="enable_cache">Enable Cache</string>
</resources>