<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="60dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_face" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="-"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_uid"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:padding="0dp"
            android:text="uid: -"
            android:textAlignment="center"
            android:textSize="12sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_option_menu"
        android:elevation="4dp"
        android:orientation="vertical"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_header">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_setting"
            style="@style/OptionMenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:theme="@style/OptionMenuButton"
            app:icon="@drawable/ic_settings" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_update_profile"
            style="@style/OptionMenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_profile"
            android:theme="@style/OptionMenuButton"
            app:icon="@drawable/ic_account" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_clean_cache"
            style="@style/OptionMenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clean_cache"
            android:theme="@style/OptionMenuButton"
            app:icon="@drawable/ic_delete_cache" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_update"
            style="@style/OptionMenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Check for Update (v1.0.0)"
            android:theme="@style/OptionMenuButton"
            app:icon="@drawable/ic_update" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_logout"
            style="@style/OptionMenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:theme="@style/OptionMenuButton"
            app:icon="@drawable/ic_logout"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>